Simplification des options d'import (Import.java) et corrections d'avertissements indiqués par Netbeans et VS Code